Fix vertical alignment of nav ul li's

--- a/_sass/tale/_layout.scss
+++ b/_sass/tale/_layout.scss
@@ -50,7 +50,7 @@ footer,
 
   ul {
     list-style-type: none;
-    margin: 0.5rem 0 0;
+    margin: 0.5rem;
     padding: 0;
     text-align: center;
   }
